Update Scientific Supervisor

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -79,7 +79,7 @@ about:
  audit-committee: Audit committee
  audit-committee-about: Supervises and audits the work of the organization.
  supervisor: Scientific supervisor
- supervisor-about: Prof. Skomorowski is our scientific supervisor, honorary member and apart of his role in KSI he is the director of the Institute of Computer Science of the Jagiellonian Univerisity.
+ supervisor-about: dr hab. Adam Roman is our scientific supervisor, honorary member and apart of his role in KSI he is the director of the Institute of Computer Science of the Jagiellonian Univerisity.
  admins: IT Administrators
  admins-about: Maintaining our servers and internal network.
  housekeepers: Housekeepers
