Add info about 2022/2023 board

--- a/jekyll/_data/ksi_decades/202.yml
+++ b/jekyll/_data/ksi_decades/202.yml
@@ -23,3 +23,14 @@ years:
     admini:     Mikołaj Janusz, Jakub Parapura, Piotr Zieliński
     gospodarz:  Monika Mikuła
     rewizyjna:  Mateusz Maćkowski, Adam Pardyl, Łukasz Sereda
+  - year: 2022
+    header:
+    body:
+    zarzad_info: true
+    prezes:     Filip Szymeczko
+    vice:       Dominika Duda
+    skarbnik:   Paweł Ryś
+    czlonkowie: Tomasz Miśkowicz, Agata Brachmańska, Franciszek Stachura
+    admini:     Mikołaj Janusz, Jakub Parapura, Piotr Zieliński
+    gospodarz:  Monika Mikuła, Jakub Parapura
+    rewizyjna:  Daniel Barczyk, Tomasz Dądela, Mikołaj Janusz
