Fix information about KSI scientific supervisor

--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -79,7 +79,7 @@ about:
   audit-committee: Komisja rewizyjna
   audit-committee-about: Nadzoruje i rewiduje działania Koła.
   supervisor: Opiekun naukowy Koła
-  supervisor-about: dr hab. Adam Roman jest opiekunem naukowym naszego Koła, honorowym członkiem oraz dyrektorem Instytutu Informatyki Uniwersytetu Jagiellońskiego.
+  supervisor-about: dr hab. Adam Roman, prof. UJ jest opiekunem naukowym naszego Koła.
   admins: Administratorzy
   admins-about: Odpowiedzialni za serwery i sieć Koła.
   housekeepers: Gospodarze
