--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -79,7 +79,7 @@ about:
  audit-committee: Audit committee
  audit-committee-about: Supervises and audits the work of the organization.
  supervisor: Scientific supervisor
- supervisor-about: dr hab. Adam Roman, prof. UJ is our scientific supervisor.
+ supervisor-about: Dr hab. Adam Roman, prof. UJ is our scientific supervisor.
  admins: IT Administrators
  admins-about: Maintaining our servers and internal network.
  housekeepers: Housekeepers
