--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -97,9 +97,11 @@ events:
   title: Wydarzenia
   sfi_name: Studencki Festiwal Informatyczny
   sfi_text: Międzynarodowa konferencja informatyczna organizowana przez studentów, dla studentów. Od 2005 r. wraz z kołami naukowymi z 3 innych krakowskich uczelni co rok zapraszamy prelegentów z całego świata, na liście których znalazły się nazwiska takie jak Andrew S. Tanenbaum, Thomas Cormen, Larry Wall, Richard Stallman czy Kevin Warwick. Podczas trzech dni konferencji odbywa się kilkadziesiąt wykładów i warsztatów, które przyciąga kilka tysięcy uczestników rocznie. Biletem wstępu są jedynie pasja i odrobina chęci oraz zainteresowania tematem.
-  ksitalk: ksiTalk to comiesięczne seminarium studenckie Koła Studentów Informatyki UJ. Cykliczne spotkania Koła mają na celu dzielenie się wiedzą, poszerzanie horyzontów w dziedzinie informatyki oraz ćwiczenie umiejętności retorycznych. Na każdym spotkaniu odbywa się wykład zaproszonego pracownika naukowego, co pozwala studentom nawiązać bliższy kontakt z nauką i potencjalnie rozpocząć współpracę. Oprócz tego odbywają się co najmniej 2 prelekcje członków Koła, którzy przedstawiają realizowane przez nich projekty naukowe, interesujące ich zagadnienia i prace.
+  ksitalk: ksiTalk to seminarium studenckie Koła Studentów Informatyki UJ. Cykliczne spotkania Koła mają na celu dzielenie się wiedzą, poszerzanie horyzontów w dziedzinie informatyki oraz ćwiczenie umiejętności retorycznych. Na każdym spotkaniu odbywa się wykład zaproszonego pracownika naukowego, co pozwala studentom nawiązać bliższy kontakt z nauką i potencjalnie rozpocząć współpracę. Oprócz tego odbywają się co najmniej 2 prelekcje członków Koła, którzy przedstawiają realizowane przez nich projekty naukowe, interesujące ich zagadnienia i prace.
   corp_name: Wykłady i warsztaty we współpracy z firmami IT
   corp_desc: W KSI rozumiemy jak ważna jest współpraca nauki z biznesem.
+  ksin: KSI<sup>n</sup> to coroczna konferencja naukowa na której każdy uczestnik wygłasza krótki referat na dowolny temat związany z informatyką. Jest to świetny sposób na poszerzenie swojej wiedzy na temat IT oraz, oczywiście, integrację między Członkami Koła. Wyjazd jest organizowany w maju.
+  workshops: Organizujemy warsztaty na różne tematy - programowanie gier VR, elektornika, grafika, CV...
   ksicamp: Specjalnie dla studentów pierwszego roku KSI organizuje cykl weekendowych warsztatów wprowadzających do programowania, środowiska programisty i pracy w zespole. Udział w ksiCampie zapewnia gładkie wejście w studia informatyczne oraz pozwala przećwiczyć zdobytą na zajęciach wiedzę do rozwiązywania praktycznych problemów.
   ksilearn: 'KSILearn to cotygodniowe spotkania członków Koła mające na celu dzielenie się wiedzą, poszerzanie horyzontów w dziedzinie informatyki oraz wzbudzanie zainteresowania tematami pozaprogramowymi. Do tej pory rozpoczęliśmy kursy o następujących tematach: Structure and Interpretation of Computer Programs, Teoria kategorii, Cracking the Coding Interview, oraz Programowanie w języku Python dla początkujących.'
   science_fests: Festiwale nauki
@@ -108,6 +110,8 @@ events:
   mnn_desc: Warsztaty z tworzenia gier dla dzieci
   fnis: Festiwal Nauki i Sztuki w Krakowie
   fnis_desc: Namiot KSI na krakowskim Rynku Głównym
+  dw: Dzień Wydziału
+  dw_desc: Warsztaty z elektroniki/programowania Raspberry Pi Pico
   social_events: Integracja
   social_events_desc: Od wiosennego KSIgrilla po udział w Balu Wydziału.
   co_op: Zorganizuj wydarzenia z KSI UJ
@@ -130,7 +134,8 @@ projects:
   cas-about: Centralne uwierzytelnienie do wszystkich usług internetowych KSI UJ.
   arda-about: Nasz główny serwer i baza dla innych projektów.
   3dprinter: Drukarka 3D
-  3dprinter-about: Prusa i3 zbudowana przez KSI. Niestety zepsuła się jakiś czas temu.
+  3dprinter-about: "Prusa i3 zbudowana przez KSI. Niestety zepsuła się jakiś czas temu. UPDATE: W październiku 2023 roku dostaliśmy nową od Wydziału! Dziękujemy!"
   cluster: Klaster obliczeniowy
+
   cluster-about: Co można zrobić z kilkoma starymi komputerami? Zbudować eksperymentalny klaster obliczeniowy!
   ksicianka-about: Legendy mówią, że nadal można ją znaleźć gdzieś w siedzibie Koła - oficjalna gra karciana KSI - zaczęta, lecz nigdy nie dokończona.
