Add info about new board

--- a/jekyll/_data/ksi_decades/202.yml
+++ b/jekyll/_data/ksi_decades/202.yml
@@ -34,3 +34,14 @@ years:
     admini:     Mikołaj Janusz, Jakub Parapura, Piotr Zieliński
     gospodarz:  Monika Mikuła, Jakub Parapura
     rewizyjna:  Daniel Barczyk, Tomasz Dądela, Mikołaj Janusz
+  - year: 2023
+    header:
+    body:
+    zarzad_info: true
+    prezes:     Franciszek Stachura
+    vice:       Patryk Rogalski
+    skarbnik:   Konrad Baran
+    czlonkowie: Agata Brachmańska, Piotr Berestka, Michał Hoffmann, Tomasz Dądela
+    admini:     Tomasz Kulis, Łukasz Drukała, Michał Latra
+    gospodarz:  Filip Jasionowicz, Krzysztof Gębka
+    rewizyjna:  Filip Szymeczko, Jakub Parapura, Dorian Duda
