Update honorary members list and KSI decades

--- a/jekyll/_data/ksi_decades/202.yml
+++ b/jekyll/_data/ksi_decades/202.yml
@@ -45,3 +45,16 @@ years:
     admini:     Tomasz Kulis, Łukasz Drukała, Michał Latra
     gospodarz:  Filip Jasionowicz, Krzysztof Gębka
     rewizyjna:  Filip Szymeczko, Jakub Parapura, Dorian Duda
+  - year: 2024
+    header:
+    body:
+    zarzad_info: true
+    prezes: Patryk Rogalski
+    vice: Weronika Żygis
+    skarbnik: Tomasz Kulis
+    czlonkowie: Karolina Kulas, Aleksander Wiśniewski, Adam Tytoń, Łukasz Drukała
+    admini: Franciszek Stachura, Tomasz Kulis, Łukasz Drukała, Michał Latra, Ignacy Alwasiak, Mikołaj Janusz, Piotr Zieliński
+    gospodarz: Krzystof Gębka, Filip Jasionowicz
+    rewizyjna: Franciszek Stachura, Tomasz Miśkowicz, Krzysztof Gębka
+
+
